# Excel-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  excel_tools.py  i18n.py  local_tools.py  memory.py
workbooks/: README.md
