[project]
name = "excel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.6.5",
    "google-api-python-client>=2.196.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-genai>=2.1.0",
    "ollama>=0.6.2",
    "openai>=2.36.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "send2trash>=2.1.0",
    "sqlalchemy>=2.0.49",
]
